Home page mobile design done

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,72 @@
     <title>News Letter</title>
   </head>
   <body>
-    <h1 class="text-center text-3xl font-roboto">News Letter registration</h1>
+    <main class="flex flex-col">
+      <img src="./images/illustration-sign-up-mobile.svg" alt="hero" />
+      <div class="p-10">
+        <h1 class="text-4xl font-bold">Stay updated!</h1>
+        <p class="text-md mt-3 block">
+          Join 60,000+ product managers receiving monthly updates on:
+        </p>
+
+        <ul class="pb-9 pt-5 flex flex-col space-y-3">
+          <li class="flex justify-between">
+            <img class="mr-4" src="images/icon-list.svg" alt="list" />
+            <p class="mr-auto">Product discovery and building what matters</p>
+          </li>
+          <li class="flex justify-between items-center">
+            <img class="mr-4" src="images/icon-list.svg" alt="list" />
+            <p class="mr-auto">Measuring to ensure updates are a success</p>
+          </li>
+          <li class="flex justify-between items-center">
+            <img class="mr-4" src="images/icon-list.svg" alt="list" />
+            <p class="mr-auto">And much more!</p>
+          </li>
+        </ul>
+
+        <form>
+          <label class="block text-darkGrey font-bold mb-2 text-sm" for="email"
+            >Email address</label
+          >
+          <input
+            class="block w-full pl-4 focus:outline-0 ring-1 ring-regularGrey rounded-md py-3"
+            type="email"
+            name="email"
+            id="email"
+            placeholder="email@company.com"
+          />
+          <button
+            class="block mt-5 mx-auto py-3 px-2 w-full bg-darkGrey text-white rounded-md"
+          >
+            Subscribe to monthly newsletter
+          </button>
+        </form>
+      </div>
+    </main>
   </body>
   <script src="script.js"></script>
 </html>
+
+<!-- Stay updated!
+
+  Join 60,000+ product managers receiving monthly updates on:
+
+  Product discovery and building what matters
+  Measuring to ensure updates are a success
+  And much more!
+
+  Email address
+  email@company.com
+
+  Subscribe to monthly newsletter -->
+
+<!-- Sign-up form end -->
+
+<!-- Success message start -->
+
+<!-- Thanks for subscribing!
+
+  A confirmation email has been sent to ash@loremcompany.com. 
+  Please open it and click the button inside to confirm your subscription.
+
+  Dismiss message -->
