--- a/public/index.html
+++ b/public/index.html
@@ -68,15 +68,16 @@
           </li>
         </ul>
 
-        <form class="lg:mt-3">
+        <form class="lg:mt-3 group">
           <label
             class="block text-darkGrey font-bold mb-2 lg:mb-1 text-sm lg:text-[0.65rem]"
             for="email"
-            >Email address</label
-          >
+            >Email address
+            <span id="error-text" class="text-rose-500 float-right"></span>
+          </label>
           <input
-            class="block w-full pl-4 focus:outline-0 ring-1 ring-regularGrey placeholder:lg:text-xs rounded-md lg:rounded py-3 lg:py-1 lg:font-sm font-semi-bold"
-            type="email"
+            class="block w-full pl-4 focus:outline-0 ring-1 ring-regularGrey placeholder:lg:text-xs text-sm rounded-md lg:rounded py-3 lg:py-1 lg:font-sm font-semi-bold"
+            type="text"
             name="email"
             id="email"
             placeholder="email@company.com"
